# vibe-coding-hackathon-2026-tensor-bloom

./: .gitignore  README.md
docs/: ARCHITECTURE.md  DEPLOY_GCP.md  PRD.md  ROADMAP.md  WORKSTREAMS.md
infra/: .env.example  docker-compose.yml  sandbox.Dockerfile
libs/proto/: Makefile  buf.gen.yaml  orchestration.proto
libs/ts-types/: index.ts
scripts/: gen-keys.sh  setup-dev.sh
services/cosign-api/: Dockerfile  go.mod  go.sum  sqlc.yaml
services/cosign-web/: Dockerfile  package-lock.json  (+1 more)
services/cosign-worker/: Dockerfile  pyproject.toml
services/cosign-worker/config/: llm-routing.mock.yaml  llm-routing.yaml
services/cosign-worker/cosign_worker/: __main__.py  config.py  context.py
services/cosign-worker/cosign_worker/db/: pool.py
services/cosign-worker/cosign_worker/llm/: prompt_cache.py  router.py
services/cosign-worker/cosign_worker/orchestration/: dbio.py  events.py  graph.py  interrupts.py  state.py
services/cosign-worker/cosign_worker/orchestration/nodes/: common.py  critic.py  finalize.py  implementer.py  plan.py  reviewer.py
services/cosign-worker/cosign_worker/rpc/: server.py
services/cosign-worker/cosign_worker/rpc/pb/: orchestration_pb2.py  orchestration_pb2.pyi  orchestration_pb2_grpc.py
services/cosign-worker/cosign_worker/sandbox/: docker_driver.py  driver.py
services/cosign-worker/cosign_worker/tools/: base.py  code.py  diff_analysis.py  github.py  identity_client.py  lint.py  repo_map.py  review.py  test_runner.py
services/cosign-worker/tests/: test_orchestration.py  test_router.py  test_sandbox.py  test_tools.py
(+58 files in other folders)
