[project]
name = "cosign-worker"
version = "0.1.0"
description = "Cosign worker — LangGraph multi-agent orchestration, sandbox, per-role LLM router."
requires-python = ">=3.12"
dependencies = [
    # HTTP (health/metrics) + gRPC
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "grpcio>=1.68",
    "grpcio-tools>=1.68",
    "protobuf>=5.28",
    # Stores
    "asyncpg>=0.30",
    "redis[hiredis]>=5.2",
    # Sandbox
    "aiodocker>=0.23",
    # LLM routing + cost
    "litellm>=1.50",
    "pyyaml>=6.0",
    # Orchestration (Phase 5)
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
    # GitHub (Phase 4) — acts as the invoking user via OAuth
    "githubkit>=0.11",
    # repo_map (Phase 4)
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.3",
    # Observability
    "structlog>=24.4",
    "prometheus-fastapi-instrumentator>=7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["cosign_worker/rpc/pb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["cosign_worker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
